# zFile-transfer-station-release

./: .gitignore  GITHUB_PUBLISH.md  README.md
client/cli/: main.go
client/gui/: go.mod  index.html  main.go
client/qt/: FileTransferQt.pro  README-build.txt  main.cpp
client/tauri/: index.html  package-lock.json  package.json
client/tauri/src/: main.js  style.css
client/tauri/src-tauri/: Cargo.toml  tauri.conf.json
client/tauri/src-tauri/src/: main.rs
docs/: deployment.md  win7-qt-client-plan.md
server/: go.mod  install-linux.sh  main.go
web/: index.html
